--- a/views/general.html
+++ b/views/general.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ReactJS-AdminLTE | General UI</title>
+        <title>LSIO-UI | General UI</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
         name="viewport">
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- Theme style -->
         <link rel="stylesheet" href="/dist/css/AdminLTE.min.css">
-        <!-- AdminLTE Skins. Choose a skin from the css/skins
+        <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
         <link rel="stylesheet" href="/dist/css/skins/_all-skins.min.css">
 
@@ -36,7 +36,7 @@
             <!-- Dashboard component gets rendered here -->
         </div>
 
-        
+
     </body>
 
 
@@ -45,7 +45,7 @@
 
 
     <!--Use this only in development, while using React Hot Loader -->
-<!--      
+<!--
     <script src="http://localhost:8080/dist/js/vendors.js"></script>
     <script src="http://localhost:8080/dist/js/generalUIElements.bundle.js"></script>
  -->
