--- a/views/index2.html
+++ b/views/index2.html
@@ -37,7 +37,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>A</b>LT</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Admin</b>LTE</span>
+          <span class="logo-lg"><b>LSIO-UI</b></span>
         </a>
 
         <!-- Header Navbar: style can be found in header.less -->
@@ -1104,9 +1104,9 @@
 
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 2.3.0
+          <b>Version</b> 0.1.0
         </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2016 <a href="http://lambdastack.io">LambdaStack</a>.</strong> All rights reserved.
       </footer>
 
       <!-- Control Sidebar -->
