--- a/views/buttons.html
+++ b/views/buttons.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ReactJS-AdminLTE | Dashboard</title>
+        <title>LSIO-UI | Dashboard</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
         name="viewport">
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- Theme style -->
         <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
-        <!-- AdminLTE Skins. Choose a skin from the css/skins
+        <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
         <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
         <!-- iCheck -->
@@ -58,7 +58,7 @@
     // <script src="dist/js/pages/dashboard.js"></script>
     // <script src="dist/js/demo.js"></script> -->
     </body>
-    
+
     <script src="/dist/js/vendors.js"></script>
     <script src="/dist/js/buttons.bundle.js"></script>
 
