--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ReactJS-AdminLTE | Dashboard</title>
+        <title>LSIO-UI | Dashboard</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
         name="viewport">
@@ -58,15 +58,15 @@
     // <script src="dist/js/pages/dashboard.js"></script>
     // <script src="dist/js/demo.js"></script> -->
 
-        
+
         <script src="/dist/js/vendors.js"></script>
         <script src="/dist/js/chartVendors.bundle.js"></script>
         <script src="/dist/js/dashboardV1.bundle.js"></script>
-    
+
 
      <!--Use this only in development, while using React Hot Loader -->
-<!-- 
-        <script src="http://localhost:8080/dist/js/vendors.js"></script>      
+<!--
+        <script src="http://localhost:8080/dist/js/vendors.js"></script>
         <script src="http://localhost:8080/dist/js/chartVendors.bundle.js"></script>
         <script src="http://localhost:8080/dist/js/dashboardV1.bundle.js"></script>
  -->
