--- a/public/pages/layout/top-nav.html
+++ b/public/pages/layout/top-nav.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Top Navigation</title>
+    <title>LSIO-UI 2 | Top Navigation</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -13,8 +13,8 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
+    <link rel="stylesheet" href="../../dist/css/lsio.min.css">
+    <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-static-top">
           <div class="container">
             <div class="navbar-header">
-              <a href="../../index2.html" class="navbar-brand"><b>Admin</b>LTE</a>
+              <a href="../../index2.html" class="navbar-brand"><b>LSIO-UI</b></a>
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                 <i class="fa fa-bars"></i>
               </button>
@@ -257,9 +257,9 @@
     <script src="../../plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
     <script src="../../plugins/fastclick/fastclick.min.js"></script>
-    <!-- AdminLTE App -->
+    <!-- LSIO-UI App -->
     <script src="../../dist/js/app.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
+    <!-- LSIO-UI for demo purposes -->
     <script src="../../dist/js/demo.js"></script>
   </body>
 </html>
