--- a/views/index2.html
+++ b/views/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Dashboard</title>
+    <title>LSIO-UI 2 | Dashboard</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -15,8 +15,8 @@
     <!-- jvectormap -->
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
+    <link rel="stylesheet" href="dist/css/lsio.min.css">
+    <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 
@@ -78,7 +78,7 @@
                             <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
-                            AdminLTE Design Team
+                            LSIO-UI Design Team
                             <small><i class="fa fa-clock-o"></i> 2 hours</small>
                           </h4>
                           <p>Why not buy a new awesome theme?</p>
@@ -700,7 +700,7 @@
                           </div><!-- /.direct-chat-info -->
                           <img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                           <div class="direct-chat-text">
-                            Working with AdminLTE on a great new app! Wanna join?
+                            Working with LSIO-UI on a great new app! Wanna join?
                           </div><!-- /.direct-chat-text -->
                         </div><!-- /.direct-chat-msg -->
 
@@ -1282,7 +1282,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <!-- FastClick -->
     <script src="plugins/fastclick/fastclick.min.js"></script>
-    <!-- AdminLTE App -->
+    <!-- LSIO-UI App -->
     <script src="dist/js/app.min.js"></script>
     <!-- Sparkline -->
     <script src="plugins/sparkline/jquery.sparkline.min.js"></script>
@@ -1293,9 +1293,9 @@
     <script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- ChartJS 1.0.1 -->
     <script src="plugins/chartjs/Chart.min.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <!-- LSIO-UI dashboard demo (This is only for demo purposes) -->
     <script src="dist/js/pages/dashboard2.js"></script>
-    <!-- AdminLTE for demo purposes -->
+    <!-- LSIO-UI for demo purposes -->
     <script src="dist/js/demo.js"></script>
   </body>
 </html>
