--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -15,8 +15,8 @@
         <!-- Ionicons -->
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- Theme style -->
-        <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
-        <!-- AdminLTE Skins. Choose a skin from the css/skins
+        <link rel="stylesheet" href="dist/css/lsio.min.css">
+        <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
         <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
         <!-- iCheck -->
@@ -52,7 +52,7 @@
     </script>
 -->
 
-        <!-- AdminLTE App -->
+        <!-- LSIO-UI App -->
 
         <!-- <script src="dist/js/app.js"></script>
     // <script src="dist/js/pages/dashboard.js"></script>
